Created a default alias for generic commands

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Step One, My Website</h1>
+    <h1>Created an automated alias command for Git Pull:Push</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
@@ -31,3 +31,7 @@
     ></script>
   </body>
 </html>
+
+<!-- $ git config --add alias.pullpush '!set -eu; git pull origin main && git add . && git commit "$1" && git push origin main'
+
+git pullpush "Created a default alias for generic commands" -->
